Apply environment master data definitions
